客户列表中的转移和批量转移遵循客户手机校验规则 修复客户规则的bug